--- a/templates/wallet/bill.html
+++ b/templates/wallet/bill.html
@@ -1,7 +1,7 @@
 🟢 Счет #{{ bill.code }}
 
 Сумма счета: {{ bill.amount }} {{ bill.cryptocurrency }} ({{ fiat_amount }} {{ wallet_currency }})
-Состояние: {{ bill.status }}
+Состояние: {{ 'не оплачен' if bill.status == 'new' else 'оплачен' }}
 Создан: {{ bill.creation_date }}
 
 Скопируйте ссылку, чтобы поделиться счетом:
