--- a/templates/wallet/check.html
+++ b/templates/wallet/check.html
@@ -1,7 +1,7 @@
 🟢 Чек #{{ check.code }}
 
 Сумма чека: {{ check.amount }} {{ check.cryptocurrency }} ({{ fiat_amount }} {{ wallet_currency }})
-Состояние: {{ check.status }}
+Состояние: {{ 'не обналичен' if check.status == 'new' else 'обналичен' }}
 Создан: {{ check.creation_date }}
 
 Скопируйте ссылку, чтобы поделиться чеком:
