Units and some tests

--- a/templates/wallet/replenish.html
+++ b/templates/wallet/replenish.html
@@ -1,4 +1,5 @@
 Используйте адрес ниже для пополнения баланса {{ crypto }}.
-Сеть: mainnet – {{ crypto }} ‼️
 
-{{ address }}
+Сеть: <b>{{ network }}</b>
+
+<code>{{ address }}</code>
